--- a/index.css
+++ b/index.css
@@ -1,3 +1,43 @@
 h1 {
     color: goldenrod;
+    font-size: 52px;
+}
+
+body {
+    text-align: center;
+    background-image: url('images/table.png');
+    background-size: cover;
+    font-family: 'Trebuchet MS', sans-serif;
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#message-el, #cards-el, #sum-el {
+    font-style: italic;
+    margin: 20px auto;
+}
+
+
+
+button {
+    color: #016f32;
+    font-size: 20px;
+    width: 200px;
+    background: goldenrod;
+    font-weight: bold;
+    box-shadow: 0px 0px 0px;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 2px;
+    margin-top: 5px;
+
 }
